change notebooks to 2gb executor mem, kafka instructions

--- a/notebooks/pyspark-nb-1.ipynb
+++ b/notebooks/pyspark-nb-1.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created spark successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -23,10 +31,12 @@
     "        builder.\\\n",
     "        appName(\"pyspark-nb-1\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
-    "        config(\"spark.executor.memory\", \"512m\").\\\n",
+    "        config(\"spark.executor.memory\", \"2048m\").\\\n",
     "        config(\"spark.eventLog.enabled\", \"true\").\\\n",
     "        config(\"spark.eventLog.dir\", \"file:///opt/workspace/events\").\\\n",
-    "        getOrCreate()"
+    "        getOrCreate()\n",
+    "\n",
+    "print(\"created spark successfully.\")"
    ]
   },
   {
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisBy2.count()"
    ]
@@ -93,11 +121,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(number=0), Row(number=2), Row(number=4), Row(number=6), Row(number=8)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "divisBy2.sort(\"number\").take(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "divisBy2.sort(\"number\").take(5)"
+    "spark.stop()"
    ]
   },
   {
@@ -105,9 +153,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "spark.stop()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -126,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
