--- a/notebooks/pyspark-nb-2-execplan.ipynb
+++ b/notebooks/pyspark-nb-2-execplan.ipynb
@@ -19,10 +19,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/01/02 18:08:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/05/01 21:51:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created spark successfully.\n"
      ]
     }
    ],
@@ -32,10 +39,12 @@
     "        builder.\\\n",
     "        appName(\"pyspark-nb-2-execplan\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
-    "        config(\"spark.executor.memory\", \"512m\").\\\n",
+    "        config(\"spark.executor.memory\", \"2048m\").\\\n",
     "        config(\"spark.eventLog.enabled\", \"true\").\\\n",
     "        config(\"spark.eventLog.dir\", \"file:///opt/workspace/events\").\\\n",
-    "        getOrCreate()      "
+    "        getOrCreate()      \n",
+    "\n",
+    "print(\"created spark successfully.\")"
    ]
   },
   {
@@ -141,6 +150,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 3:=============================>                             (3 + 3) / 6]\r"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -149,11 +165,18 @@
       "+-------+-----------------+-------------------+------------------+\n",
       "|  count|             1502|               1502|              1502|\n",
       "|   mean|             null|               null|1718.3189081225032|\n",
-      "| stddev|             null|               null|22300.368619668898|\n",
+      "| stddev|             null|               null|22300.368619668894|\n",
       "|    min|      Afghanistan|        Afghanistan|                 1|\n",
       "|    max|         Zimbabwe|           Zimbabwe|            370002|\n",
       "+-------+-----------------+-------------------+------------------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -188,9 +211,12 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "*(2) Sort [count#12 ASC NULLS FIRST], true, 0\n",
-      "+- Exchange rangepartitioning(count#12 ASC NULLS FIRST, 200)\n",
-      "   +- *(1) FileScan csv [DEST_COUNTRY_NAME#10,ORIGIN_COUNTRY_NAME#11,count#12] Batched: false, Format: CSV, Location: InMemoryFileIndex[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/workspace/da..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n"
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- Sort [count#18 ASC NULLS FIRST], true, 0\n",
+      "   +- Exchange rangepartitioning(count#18 ASC NULLS FIRST, 200), ENSURE_REQUIREMENTS, [id=#56]\n",
+      "      +- FileScan csv [DEST_COUNTRY_NAME#16,ORIGIN_COUNTRY_NAME#17,count#18] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -264,9 +290,12 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "*(2) Sort [count#12 ASC NULLS FIRST], true, 0\n",
-      "+- Exchange rangepartitioning(count#12 ASC NULLS FIRST, 2)\n",
-      "   +- *(1) FileScan csv [DEST_COUNTRY_NAME#10,ORIGIN_COUNTRY_NAME#11,count#12] Batched: false, Format: CSV, Location: InMemoryFileIndex[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/workspace/da..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n"
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- Sort [count#18 ASC NULLS FIRST], true, 0\n",
+      "   +- Exchange rangepartitioning(count#18 ASC NULLS FIRST, 2), ENSURE_REQUIREMENTS, [id=#72]\n",
+      "      +- FileScan csv [DEST_COUNTRY_NAME#16,ORIGIN_COUNTRY_NAME#17,count#18] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -329,10 +358,13 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "*(2) HashAggregate(keys=[], functions=[sum(cast(count#12 as bigint))])\n",
-      "+- Exchange SinglePartition\n",
-      "   +- *(1) HashAggregate(keys=[], functions=[partial_sum(cast(count#12 as bigint))])\n",
-      "      +- *(1) FileScan csv [count#12] Batched: false, Format: CSV, Location: InMemoryFileIndex[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/workspace/da..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<count:int>\n"
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- HashAggregate(keys=[], functions=[sum(count#18)])\n",
+      "   +- Exchange SinglePartition, ENSURE_REQUIREMENTS, [id=#91]\n",
+      "      +- HashAggregate(keys=[], functions=[partial_sum(count#18)])\n",
+      "         +- FileScan csv [count#18] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<count:int>\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -372,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +431,7 @@
     "        builder.\\\n",
     "        appName(\"pyspark-notebook-2-filter-count\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
-    "        config(\"spark.executor.memory\", \"512m\").\\\n",
+    "        config(\"spark.executor.memory\", \"2048m\").\\\n",
     "        config(\"spark.eventLog.enabled\", \"true\").\\\n",
     "        config(\"spark.eventLog.dir\", \"file:///opt/workspace/events\").\\\n",
     "        getOrCreate()      "
@@ -407,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -448,25 +480,26 @@
      "output_type": "stream",
      "text": [
       "== Parsed Logical Plan ==\n",
-      "Project [ORIGIN_COUNTRY_NAME#244, count#245]\n",
-      "+- Filter (DEST_COUNTRY_NAME#243 = United States)\n",
-      "   +- Relation[DEST_COUNTRY_NAME#243,ORIGIN_COUNTRY_NAME#244,count#245] csv\n",
+      "Project [ORIGIN_COUNTRY_NAME#17, count#18]\n",
+      "+- Filter (DEST_COUNTRY_NAME#16 = United States)\n",
+      "   +- Relation [DEST_COUNTRY_NAME#16,ORIGIN_COUNTRY_NAME#17,count#18] csv\n",
       "\n",
       "== Analyzed Logical Plan ==\n",
       "ORIGIN_COUNTRY_NAME: string, count: int\n",
-      "Project [ORIGIN_COUNTRY_NAME#244, count#245]\n",
-      "+- Filter (DEST_COUNTRY_NAME#243 = United States)\n",
-      "   +- Relation[DEST_COUNTRY_NAME#243,ORIGIN_COUNTRY_NAME#244,count#245] csv\n",
+      "Project [ORIGIN_COUNTRY_NAME#17, count#18]\n",
+      "+- Filter (DEST_COUNTRY_NAME#16 = United States)\n",
+      "   +- Relation [DEST_COUNTRY_NAME#16,ORIGIN_COUNTRY_NAME#17,count#18] csv\n",
       "\n",
       "== Optimized Logical Plan ==\n",
-      "Project [ORIGIN_COUNTRY_NAME#244, count#245]\n",
-      "+- Filter (isnotnull(DEST_COUNTRY_NAME#243) && (DEST_COUNTRY_NAME#243 = United States))\n",
-      "   +- Relation[DEST_COUNTRY_NAME#243,ORIGIN_COUNTRY_NAME#244,count#245] csv\n",
+      "Project [ORIGIN_COUNTRY_NAME#17, count#18]\n",
+      "+- Filter (isnotnull(DEST_COUNTRY_NAME#16) AND (DEST_COUNTRY_NAME#16 = United States))\n",
+      "   +- Relation [DEST_COUNTRY_NAME#16,ORIGIN_COUNTRY_NAME#17,count#18] csv\n",
       "\n",
       "== Physical Plan ==\n",
-      "*(1) Project [ORIGIN_COUNTRY_NAME#244, count#245]\n",
-      "+- *(1) Filter (isnotnull(DEST_COUNTRY_NAME#243) && (DEST_COUNTRY_NAME#243 = United States))\n",
-      "   +- *(1) FileScan csv [DEST_COUNTRY_NAME#243,ORIGIN_COUNTRY_NAME#244,count#245] Batched: false, Format: CSV, Location: InMemoryFileIndex[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/workspace/da..., PartitionFilters: [], PushedFilters: [IsNotNull(DEST_COUNTRY_NAME), EqualTo(DEST_COUNTRY_NAME,United States)], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n"
+      "*(1) Project [ORIGIN_COUNTRY_NAME#17, count#18]\n",
+      "+- *(1) Filter (isnotnull(DEST_COUNTRY_NAME#16) AND (DEST_COUNTRY_NAME#16 = United States))\n",
+      "   +- FileScan csv [DEST_COUNTRY_NAME#16,ORIGIN_COUNTRY_NAME#17,count#18] Batched: false, DataFilters: [isnotnull(DEST_COUNTRY_NAME#16), (DEST_COUNTRY_NAME#16 = United States)], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [IsNotNull(DEST_COUNTRY_NAME), EqualTo(DEST_COUNTRY_NAME,United States)], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n",
+      "\n"
      ]
     }
    ],
@@ -478,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +538,7 @@
        " Row(ORIGIN_COUNTRY_NAME='Federated States of Micronesia', count=48)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
