--- a/notebooks/pyspark-nb-3-analysis.ipynb
+++ b/notebooks/pyspark-nb-3-analysis.ipynb
@@ -21,10 +21,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/01/08 16:50:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/05/01 21:52:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created spark.\n"
      ]
     }
    ],
@@ -34,10 +41,12 @@
     "        builder.\\\n",
     "        appName(\"pyspark-nb-3-analysis\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
-    "        config(\"spark.executor.memory\", \"512m\").\\\n",
+    "        config(\"spark.executor.memory\", \"2048m\").\\\n",
     "        config(\"spark.eventLog.enabled\", \"true\").\\\n",
     "        config(\"spark.eventLog.dir\", \"file:///opt/workspace/events\").\\\n",
-    "        getOrCreate()     "
+    "        getOrCreate()     \n",
+    "\n",
+    "print(\"created spark.\")"
    ]
   },
   {
@@ -115,10 +124,13 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "*(2) HashAggregate(keys=[DEST_COUNTRY_NAME#10], functions=[count(1)])\n",
-      "+- Exchange hashpartitioning(DEST_COUNTRY_NAME#10, 200)\n",
-      "   +- *(1) HashAggregate(keys=[DEST_COUNTRY_NAME#10], functions=[partial_count(1)])\n",
-      "      +- *(1) FileScan csv [DEST_COUNTRY_NAME#10] Batched: false, Format: CSV, Location: InMemoryFileIndex[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/workspace/da..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string>\n"
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[count(1)])\n",
+      "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#16, 200), ENSURE_REQUIREMENTS, [id=#33]\n",
+      "      +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[partial_count(1)])\n",
+      "         +- FileScan csv [DEST_COUNTRY_NAME#16] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string>\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -199,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 7:==============================================>        (170 + 2) / 200]"
+      "[Stage 8:>                                                          (0 + 6) / 6]\r"
      ]
     },
     {
@@ -256,7 +268,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 10:===============================================>      (176 + 3) / 200]"
+      "[Stage 11:>                                                         (0 + 6) / 6]\r"
      ]
     },
     {
@@ -321,11 +333,14 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "TakeOrderedAndProject(limit=5, orderBy=[aggOrder#74L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#10,destination_total#72L])\n",
-      "+- *(2) HashAggregate(keys=[DEST_COUNTRY_NAME#10], functions=[sum(cast(count#12 as bigint))])\n",
-      "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#10, 200)\n",
-      "      +- *(1) HashAggregate(keys=[DEST_COUNTRY_NAME#10], functions=[partial_sum(cast(count#12 as bigint))])\n",
-      "         +- *(1) FileScan csv [DEST_COUNTRY_NAME#10,count#12] Batched: false, Format: CSV, Location: InMemoryFileIndex[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/workspace/da..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n"
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- TakeOrderedAndProject(limit=5, orderBy=[destination_total#89L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#16,destination_total#89L])\n",
+      "   +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[sum(count#18)])\n",
+      "      +- Exchange hashpartitioning(DEST_COUNTRY_NAME#16, 200), ENSURE_REQUIREMENTS, [id=#233]\n",
+      "         +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[partial_sum(count#18)])\n",
+      "            +- FileScan csv [DEST_COUNTRY_NAME#16,count#18] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -358,11 +373,14 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "TakeOrderedAndProject(limit=5, orderBy=[destination_total#87L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#10,destination_total#87L])\n",
-      "+- *(2) HashAggregate(keys=[DEST_COUNTRY_NAME#10], functions=[sum(cast(count#12 as bigint))])\n",
-      "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#10, 200)\n",
-      "      +- *(1) HashAggregate(keys=[DEST_COUNTRY_NAME#10], functions=[partial_sum(cast(count#12 as bigint))])\n",
-      "         +- *(1) FileScan csv [DEST_COUNTRY_NAME#10,count#12] Batched: false, Format: CSV, Location: InMemoryFileIndex[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/workspace/da..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n"
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- TakeOrderedAndProject(limit=5, orderBy=[destination_total#103L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#16,destination_total#103L])\n",
+      "   +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[sum(count#18)])\n",
+      "      +- Exchange hashpartitioning(DEST_COUNTRY_NAME#16, 200), ENSURE_REQUIREMENTS, [id=#250]\n",
+      "         +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[partial_sum(count#18)])\n",
+      "            +- FileScan csv [DEST_COUNTRY_NAME#16,count#18] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -451,7 +469,7 @@
       " |-- StockCode: string (nullable = true)\n",
       " |-- Description: string (nullable = true)\n",
       " |-- Quantity: integer (nullable = true)\n",
-      " |-- InvoiceDate: timestamp (nullable = true)\n",
+      " |-- InvoiceDate: string (nullable = true)\n",
       " |-- UnitPrice: double (nullable = true)\n",
       " |-- CustomerID: double (nullable = true)\n",
       " |-- Country: string (nullable = true)\n",
@@ -501,7 +519,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 4:========================================>                 (7 + 3) / 10]\r"
      ]
     },
     {
@@ -538,6 +556,13 @@
       "|United Kingdom |84077    |WORLD WAR 2 GLIDERS ASSTD DESIGNS  |48326|\n",
       "+---------------+---------+-----------------------------------+-----+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -592,7 +617,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 9:=====================================================> (194 + 3) / 200]"
+      "[Stage 10:==================================>                      (6 + 4) / 10]\r"
      ]
     },
     {
@@ -687,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
