add almond to dockerfile, increase worker memory

--- a/notebooks/pyspark-nb-3-analysis.ipynb
+++ b/notebooks/pyspark-nb-3-analysis.ipynb
@@ -24,7 +24,7 @@
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/05/01 21:52:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/05/02 00:15:19 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -41,7 +41,7 @@
     "        builder.\\\n",
     "        appName(\"pyspark-nb-3-analysis\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
-    "        config(\"spark.executor.memory\", \"2048m\").\\\n",
+    "        config(\"spark.executor.memory\", \"4096m\").\\\n",
     "        config(\"spark.eventLog.enabled\", \"true\").\\\n",
     "        config(\"spark.eventLog.dir\", \"file:///opt/workspace/events\").\\\n",
     "        getOrCreate()     \n",
@@ -140,6 +140,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c2dded15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 2:>                                                          (0 + 6) / 6]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------+\n",
+      "|   DEST_COUNTRY_NAME|count(1)|\n",
+      "+--------------------+--------+\n",
+      "|            Anguilla|       6|\n",
+      "|              Russia|       6|\n",
+      "|            Paraguay|       6|\n",
+      "|             Senegal|       6|\n",
+      "|              Sweden|       6|\n",
+      "|            Kiribati|       6|\n",
+      "|              Guyana|       6|\n",
+      "|         Philippines|       6|\n",
+      "|            Malaysia|       5|\n",
+      "|           Singapore|       5|\n",
+      "|                Fiji|       6|\n",
+      "|              Turkey|       6|\n",
+      "|             Germany|       6|\n",
+      "|         Afghanistan|       3|\n",
+      "|              Jordan|       6|\n",
+      "|               Palau|       6|\n",
+      "|Turks and Caicos ...|       6|\n",
+      "|              France|       6|\n",
+      "|              Greece|       6|\n",
+      "|              Taiwan|       6|\n",
+      "+--------------------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "results.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "64a95fd3",
    "metadata": {},
@@ -149,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "28598568",
    "metadata": {},
    "outputs": [
@@ -159,7 +216,7 @@
        "[Row(max(count)=370002)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "61bc8239",
    "metadata": {},
    "outputs": [
@@ -181,7 +238,7 @@
        "[Row(max(count)=370002)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f5512939",
    "metadata": {},
    "outputs": [
@@ -211,7 +268,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 8:>                                                          (0 + 6) / 6]\r"
+      "[Stage 11:=============================>                            (3 + 3) / 6]\r"
      ]
     },
     {
@@ -260,17 +317,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ce4a0db1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 11:>                                                         (0 + 6) / 6]\r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -285,13 +335,6 @@
       "|            Japan|             9205|\n",
       "+-----------------+-----------------+\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -324,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "08ec3e4b",
    "metadata": {},
    "outputs": [
@@ -334,9 +377,9 @@
      "text": [
       "== Physical Plan ==\n",
       "AdaptiveSparkPlan isFinalPlan=false\n",
-      "+- TakeOrderedAndProject(limit=5, orderBy=[destination_total#89L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#16,destination_total#89L])\n",
+      "+- TakeOrderedAndProject(limit=5, orderBy=[destination_total#99L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#16,destination_total#99L])\n",
       "   +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[sum(count#18)])\n",
-      "      +- Exchange hashpartitioning(DEST_COUNTRY_NAME#16, 200), ENSURE_REQUIREMENTS, [id=#233]\n",
+      "      +- Exchange hashpartitioning(DEST_COUNTRY_NAME#16, 200), ENSURE_REQUIREMENTS, [id=#278]\n",
       "         +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[partial_sum(count#18)])\n",
       "            +- FileScan csv [DEST_COUNTRY_NAME#16,count#18] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
       "\n",
@@ -355,6 +398,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5b1dc3fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+-----------------+\n",
+      "|DEST_COUNTRY_NAME|destination_total|\n",
+      "+-----------------+-----------------+\n",
+      "|    United States|          2348280|\n",
+      "|           Canada|            49052|\n",
+      "|           Mexico|            38075|\n",
+      "|   United Kingdom|            10946|\n",
+      "|            Japan|             9205|\n",
+      "+-----------------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "SELECT DEST_COUNTRY_NAME, sum(count) as destination_total\n",
+    "FROM flight_data\n",
+    "GROUP BY DEST_COUNTRY_NAME\n",
+    "ORDER BY sum(count) DESC\n",
+    "LIMIT 5\n",
+    "\"\"\").show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5425dfa3",
    "metadata": {},
@@ -364,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "57ac78f1",
    "metadata": {},
    "outputs": [
@@ -374,9 +450,9 @@
      "text": [
       "== Physical Plan ==\n",
       "AdaptiveSparkPlan isFinalPlan=false\n",
-      "+- TakeOrderedAndProject(limit=5, orderBy=[destination_total#103L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#16,destination_total#103L])\n",
+      "+- TakeOrderedAndProject(limit=5, orderBy=[destination_total#113L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#16,destination_total#113L])\n",
       "   +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[sum(count#18)])\n",
-      "      +- Exchange hashpartitioning(DEST_COUNTRY_NAME#16, 200), ENSURE_REQUIREMENTS, [id=#250]\n",
+      "      +- Exchange hashpartitioning(DEST_COUNTRY_NAME#16, 200), ENSURE_REQUIREMENTS, [id=#295]\n",
       "         +- HashAggregate(keys=[DEST_COUNTRY_NAME#16], functions=[partial_sum(count#18)])\n",
       "            +- FileScan csv [DEST_COUNTRY_NAME#16,count#18] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(6 paths)[file:/opt/workspace/datain/flight-data/2010-summary.csv, file:/opt/wor..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
       "\n",
@@ -401,7 +477,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "id": "24b3d205",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-----------------+\n",
+      "| DEST_COUNTRY_NAME|destination_total|\n",
+      "+------------------+-----------------+\n",
+      "|     United States|          2348280|\n",
+      "|            Canada|            49052|\n",
+      "|            Mexico|            38075|\n",
+      "|    United Kingdom|            10946|\n",
+      "|             Japan|             9205|\n",
+      "|           Germany|             8501|\n",
+      "|Dominican Republic|             6858|\n",
+      "|            Brazil|             5635|\n",
+      "|       The Bahamas|             5459|\n",
+      "|            France|             5206|\n",
+      "|       South Korea|             5073|\n",
+      "|          Colombia|             4794|\n",
+      "|       Netherlands|             4050|\n",
+      "|           Jamaica|             3945|\n",
+      "|             China|             3429|\n",
+      "|       El Salvador|             3237|\n",
+      "|        Costa Rica|             3119|\n",
+      "|            Panama|             2530|\n",
+      "|             Spain|             2435|\n",
+      "|          Honduras|             2386|\n",
+      "+------------------+-----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "flightData.groupBy(\"DEST_COUNTRY_NAME\").sum(\"count\")\\\n",
+    "    .withColumnRenamed(\"sum(count)\", \"destination_total\").sort(desc(\"destination_total\"))\\\n",
+    "    .show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "8fd3ce1b",
    "metadata": {},
    "outputs": [],
@@ -419,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "b5485903",
    "metadata": {},
    "outputs": [],
@@ -429,7 +550,7 @@
     "        builder.\\\n",
     "        appName(\"pyspark-nb-3-analysis-pt2\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
-    "        config(\"spark.executor.memory\", \"512m\").\\\n",
+    "        config(\"spark.executor.memory\", \"4096m\").\\\n",
     "        config(\"spark.eventLog.enabled\", \"true\").\\\n",
     "        config(\"spark.eventLog.dir\", \"file:///opt/workspace/events\").\\\n",
     "        getOrCreate() "
@@ -437,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "ec3a3bec",
    "metadata": {},
    "outputs": [
@@ -456,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "f66af003",
    "metadata": {},
    "outputs": [
@@ -492,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "9ddbf235",
    "metadata": {},
    "outputs": [],
@@ -511,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "38a72cdd",
    "metadata": {},
    "outputs": [
@@ -519,7 +640,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 4:========================================>                 (7 + 3) / 10]\r"
+      "[Stage 4:====================================================>     (9 + 1) / 10]\r"
      ]
     },
     {
@@ -594,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "32d386e6",
    "metadata": {},
    "outputs": [],
@@ -609,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "1dbb8046",
    "metadata": {},
    "outputs": [
@@ -679,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "9427884c",
    "metadata": {},
    "outputs": [],
