--- a/notebooks/pyspark-nb-4-streaming.ipynb
+++ b/notebooks/pyspark-nb-4-streaming.ipynb
@@ -23,10 +23,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/01/08 17:12:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/05/02 00:20:22 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
     "        builder.\\\n",
     "        appName(\"pyspark-nb-4-streaming\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
-    "        config(\"spark.executor.memory\", \"2048m\").\\\n",
+    "        config(\"spark.executor.memory\", \"4096m\").\\\n",
     "        config(\"spark.eventLog.enabled\", \"true\").\\\n",
     "        config(\"spark.eventLog.dir\", \"file:///opt/workspace/events\").\\\n",
     "        getOrCreate()      "
@@ -90,11 +90,11 @@
     {
      "data": {
       "text/plain": [
-       "[Row(InvoiceNo='536365', StockCode='85123A', Description='WHITE HANGING HEART T-LIGHT HOLDER', Quantity=6, InvoiceDate=datetime.datetime(2010, 12, 1, 8, 26), UnitPrice=2.55, CustomerID=17850.0, Country='United Kingdom'),\n",
-       " Row(InvoiceNo='536365', StockCode='71053', Description='WHITE METAL LANTERN', Quantity=6, InvoiceDate=datetime.datetime(2010, 12, 1, 8, 26), UnitPrice=3.39, CustomerID=17850.0, Country='United Kingdom'),\n",
-       " Row(InvoiceNo='536365', StockCode='84406B', Description='CREAM CUPID HEARTS COAT HANGER', Quantity=8, InvoiceDate=datetime.datetime(2010, 12, 1, 8, 26), UnitPrice=2.75, CustomerID=17850.0, Country='United Kingdom'),\n",
-       " Row(InvoiceNo='536365', StockCode='84029G', Description='KNITTED UNION FLAG HOT WATER BOTTLE', Quantity=6, InvoiceDate=datetime.datetime(2010, 12, 1, 8, 26), UnitPrice=3.39, CustomerID=17850.0, Country='United Kingdom'),\n",
-       " Row(InvoiceNo='536365', StockCode='84029E', Description='RED WOOLLY HOTTIE WHITE HEART.', Quantity=6, InvoiceDate=datetime.datetime(2010, 12, 1, 8, 26), UnitPrice=3.39, CustomerID=17850.0, Country='United Kingdom')]"
+       "[Row(InvoiceNo='536365', StockCode='85123A', Description='WHITE HANGING HEART T-LIGHT HOLDER', Quantity=6, InvoiceDate='2010-12-01 08:26:00', UnitPrice=2.55, CustomerID=17850.0, Country='United Kingdom'),\n",
+       " Row(InvoiceNo='536365', StockCode='71053', Description='WHITE METAL LANTERN', Quantity=6, InvoiceDate='2010-12-01 08:26:00', UnitPrice=3.39, CustomerID=17850.0, Country='United Kingdom'),\n",
+       " Row(InvoiceNo='536365', StockCode='84406B', Description='CREAM CUPID HEARTS COAT HANGER', Quantity=8, InvoiceDate='2010-12-01 08:26:00', UnitPrice=2.75, CustomerID=17850.0, Country='United Kingdom'),\n",
+       " Row(InvoiceNo='536365', StockCode='84029G', Description='KNITTED UNION FLAG HOT WATER BOTTLE', Quantity=6, InvoiceDate='2010-12-01 08:26:00', UnitPrice=3.39, CustomerID=17850.0, Country='United Kingdom'),\n",
+       " Row(InvoiceNo='536365', StockCode='84029E', Description='RED WOOLLY HOTTIE WHITE HEART.', Quantity=6, InvoiceDate='2010-12-01 08:26:00', UnitPrice=3.39, CustomerID=17850.0, Country='United Kingdom')]"
       ]
      },
      "execution_count": 4,
@@ -209,25 +209,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "1f559bfa",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<pyspark.sql.streaming.StreamingQuery at 0x7fe275ff1e10>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/05/02 00:22:29 WARN ResolveWriteToStream: Temporary checkpoint location created which is deleted normally when the query didn't fail: /tmp/temporary-b57575fe-3add-409c-999f-d726580a4772. If it's required to delete it under any circumstances, please set spark.sql.streaming.forceDeleteTempCheckpointLocation to true. Important to know deleting temp checkpoint folder is best effort.\n",
+      "22/05/02 00:22:29 WARN ResolveWriteToStream: spark.sql.adaptive.enabled is not supported in streaming DataFrames/Datasets and will be disabled.\n",
+      "[Stage 24:=============>                                         (49 + 8) / 200]\r"
+     ]
+    },
+    {
+     "ename": "IllegalArgumentException",
+     "evalue": "Cannot start query with name customer_purchases as a query with that name is already active in this SparkSession",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIllegalArgumentException\u001b[0m                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4124/63015754.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Generate updates to an in-memory table after each trigger\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpurchaseByCustomerPerHour\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriteStream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"memory\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqueryName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"customer_purchases\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputMode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"complete\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pyspark/sql/streaming.py\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self, path, format, outputMode, partitionBy, queryName, **options)\u001b[0m\n\u001b[1;32m   1200\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqueryName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqueryName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1201\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1202\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jwrite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1203\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1204\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jwrite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1308\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1309\u001b[0m         return_value = get_return_value(\n\u001b[0;32m-> 1310\u001b[0;31m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[0m\u001b[1;32m   1311\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1312\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtemp_arg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtemp_args\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    115\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIllegalArgumentException\u001b[0m: Cannot start query with name customer_purchases as a query with that name is already active in this SparkSession"
+     ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 12:==================================>                   (129 + 2) / 200]"
+      "[Stage 30:===========================>                          (100 + 8) / 200]\r"
      ]
     }
    ],
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "1a0c50bf",
    "metadata": {},
    "outputs": [
@@ -254,7 +267,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 12:==========================================>           (158 + 2) / 200]"
+      "[Stage 30:============================================>         (165 + 4) / 200]\r"
      ]
     },
     {
@@ -264,11 +277,11 @@
       "+----------+--------------------+------------------+\n",
       "|CustomerID|              window|   sum(total_cost)|\n",
       "+----------+--------------------+------------------+\n",
-      "|      null|[2010-12-01 00:00...|12584.299999999988|\n",
-      "|   15061.0|[2010-12-02 00:00...| 9407.339999999998|\n",
-      "|   13777.0|[2010-12-01 00:00...|           6585.16|\n",
-      "|   17850.0|[2010-12-02 00:00...|3891.8699999999985|\n",
-      "|   16029.0|[2010-12-01 00:00...|           3702.12|\n",
+      "|   18102.0|{2010-12-07 00:00...|          25920.37|\n",
+      "|      null|{2010-12-10 00:00...|25399.560000000012|\n",
+      "|      null|{2010-12-06 00:00...|23395.099999999904|\n",
+      "|      null|{2010-12-03 00:00...| 23021.99999999999|\n",
+      "|      null|{2010-12-14 00:00...|15929.879999999974|\n",
       "+----------+--------------------+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -291,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "c99fac5e",
    "metadata": {},
    "outputs": [
@@ -302,11 +315,11 @@
       "+----------+--------------------+------------------+\n",
       "|CustomerID|              window|   sum(total_cost)|\n",
       "+----------+--------------------+------------------+\n",
-      "|      null|[2010-12-03 00:00...| 23021.99999999999|\n",
-      "|      null|[2010-12-01 00:00...|12584.299999999988|\n",
-      "|   15061.0|[2010-12-02 00:00...| 9407.339999999998|\n",
-      "|   13777.0|[2010-12-01 00:00...|           6585.16|\n",
-      "|   17850.0|[2010-12-02 00:00...|3891.8699999999985|\n",
+      "|   18102.0|{2010-12-07 00:00...|          25920.37|\n",
+      "|      null|{2010-12-10 00:00...|25399.560000000012|\n",
+      "|      null|{2010-12-17 00:00...|25371.769999999768|\n",
+      "|      null|{2010-12-06 00:00...|23395.099999999904|\n",
+      "|      null|{2010-12-03 00:00...| 23021.99999999999|\n",
       "+----------+--------------------+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -316,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 47:=========================>                             (92 + 2) / 200]"
+      "[Stage 60:=================================================>    (182 + 4) / 200]\r"
      ]
     }
    ],
@@ -329,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "0d582e89",
    "metadata": {},
    "outputs": [],
@@ -362,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
