--- a/notebooks/pyspark-nb-4-streaming.ipynb
+++ b/notebooks/pyspark-nb-4-streaming.ipynb
@@ -17,7 +17,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "acfedfc0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -46,7 +50,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b4781e4e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# Spark Streaming functions for creating window and defining a column (col) to calculate the window over\n",
@@ -67,7 +75,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d3fb63d1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -85,7 +97,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "2256c784",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -119,7 +135,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "996f08b5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# Get a Schema from the data_sample\n",
@@ -138,7 +158,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "9c57b5c1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -158,7 +182,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "a4d82892",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -190,7 +218,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "c49be3d5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create a transformation that sum's customer purchase per hour\n",
@@ -211,7 +243,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "1f559bfa",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -261,7 +297,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "1a0c50bf",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -306,7 +346,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "c99fac5e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -344,7 +388,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "0d582e89",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "spark.stop()"
@@ -354,7 +402,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e7e999c2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -364,18 +416,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
